Fix modal z-index

--- a/cmap-2019-theme/src/css/compat/components/_modals.scss
+++ b/cmap-2019-theme/src/css/compat/components/_modals.scss
@@ -1,8 +1,8 @@
 @if $compat-modals {
 
-  .modal{
+  /*.modal{
     z-index: 10001 !important; //CMAP 412
-  }
+  }*/
 
   .modal-header {
     .btn-toolbar {
